--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to right,blue,yellow);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+body {
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+}
+.logo{
+  font-size: 35px;
+  font-weight: bolder;
+  color: burlywood;
+}
+#card{
+  height: 650px;
+  
 }
